JPA puesta, falta funcionalidad y persistencia ya implementada